--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - InflusGoofs
+name: Pipeline-Fallbeispiel-Main
 
 on:
   push:
@@ -15,10 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
+      - name: Code Checkout
+        uses: actions/checkout@v4
       
       - name: Login to Azure
         uses: azure/login@v1
@@ -26,7 +24,6 @@ jobs:
           client-id: ${{ secrets.Client_ID }}
           tenant-id: ${{ secrets.Tenant_ID }}
           subscription-id: ${{ secrets.Subscription_ID }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
